--- a/.github/workflows/aws-nuke.yaml
+++ b/.github/workflows/aws-nuke.yaml
@@ -31,10 +31,109 @@ env:
   AWS_REGION: 'us-east-1'
 
 jobs:
+  test-auth:
+    runs-on: ubuntu-latest
+    outputs:
+      target_accounts: ${{ steps.get-accounts.outputs.target_accounts }}
+    steps:
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v3
+        with:
+          role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
+          aws-region: us-east-1
+          role-session-name: GitHubActionsAWSNuke
+    
+      - name: Get organization accounts
+        id: get-accounts
+        run: |
+          # Get all accounts in the organization
+          echo "Fetching accounts from AWS Organizations..."
+          ACCOUNTS=$(aws organizations list-accounts --query "Accounts[?Status=='ACTIVE'].Id" --output text || echo "")
+          
+          # Check if we got any accounts
+          if [ -z "$ACCOUNTS" ]; then
+            echo "Warning: No accounts returned from Organizations API. Are you running in the management account?"
+            echo "No accounts found to process."
+            echo "target_accounts=" >> $GITHUB_OUTPUT
+            exit 0
+          fi
+          
+          echo "Found accounts: $ACCOUNTS"
+          
+          # Create an array from the space-separated account list
+          ACCOUNTS_ARRAY=($ACCOUNTS)
+          FILTERED_ACCOUNTS=()
+          
+          # Management account ID
+          MGMT_ACCOUNT="772886489592"
+          echo "Management account ID: $MGMT_ACCOUNT"
+          
+          # Add accounts to the filtered list, excluding management account
+          for ACCOUNT in "${ACCOUNTS_ARRAY[@]}"; do
+            if [ "$ACCOUNT" != "$MGMT_ACCOUNT" ]; then
+              FILTERED_ACCOUNTS+=("$ACCOUNT")
+            else
+              echo "Excluding management account: $ACCOUNT"
+            fi
+          done
+          
+          # Handle manual exclusions if provided
+          EXCLUDED="${{ github.event.inputs.excluded_accounts }}"
+          if [ -n "$EXCLUDED" ]; then
+            echo "Processing manual exclusions: $EXCLUDED"
+            IFS=',' read -ra EXCLUDE_ARRAY <<< "$EXCLUDED"
+            
+            # Create a temporary array for the second filtering
+            TEMP_ACCOUNTS=()
+            
+            for ACCOUNT in "${FILTERED_ACCOUNTS[@]}"; do
+              EXCLUDE_THIS=false
+              for EXCLUDE_ID in "${EXCLUDE_ARRAY[@]}"; do
+                if [ "$ACCOUNT" = "$EXCLUDE_ID" ]; then
+                  EXCLUDE_THIS=true
+                  echo "Excluding manually specified account: $ACCOUNT"
+                  break
+                fi
+              done
+              
+              if [ "$EXCLUDE_THIS" = false ]; then
+                TEMP_ACCOUNTS+=("$ACCOUNT")
+              fi
+            done
+            
+            # Update the filtered accounts array
+            FILTERED_ACCOUNTS=("${TEMP_ACCOUNTS[@]}")
+          fi
+          
+          # Handle targeted accounts if provided
+          TARGET_ACCOUNTS="${{ github.event.inputs.target_accounts }}"
+          if [ -n "$TARGET_ACCOUNTS" ]; then
+            echo "Using manually targeted accounts: $TARGET_ACCOUNTS"
+            IFS=',' read -ra TARGET_ARRAY <<< "$TARGET_ACCOUNTS"
+            
+            # Replace filtered accounts with targeted accounts (excluding management)
+            FILTERED_ACCOUNTS=()
+            for TARGET_ID in "${TARGET_ARRAY[@]}"; do
+              if [ "$TARGET_ID" != "$MGMT_ACCOUNT" ]; then
+                FILTERED_ACCOUNTS+=("$TARGET_ID")
+              else
+                echo "Excluding management account from targets: $TARGET_ID"
+              fi
+            done
+          fi
+          
+          # Convert array back to comma-separated string
+          FINAL_ACCOUNTS=$(IFS=,; echo "${FILTERED_ACCOUNTS[*]}")
+          
+          echo "Final account list: ${FILTERED_ACCOUNTS[*]}"
+          echo "Accounts to be processed: $FINAL_ACCOUNTS"
+          echo "target_accounts=$FINAL_ACCOUNTS" >> $GITHUB_OUTPUT
+
   aws-nuke:
     name: Run AWS-Nuke
     runs-on: ubuntu-latest
-
+    needs: test-auth
+    
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -46,10 +145,7 @@ jobs:
           else
             echo "DRY_RUN=true" >> $GITHUB_ENV
           fi
-          echo "TARGET_ACCOUNTS=${{ github.event.inputs.target_accounts }}" >> $GITHUB_ENV
-          echo "EXCLUDED_ACCOUNTS=${{ github.event.inputs.excluded_accounts }}" >> $GITHUB_ENV
-          echo "MULTIPLE_PASSES=${{ github.event.inputs.multiple_passes }}" >> $GITHUB_ENV
-          echo "PASS_COUNT=${{ github.event.inputs.pass_count }}" >> $GITHUB_ENV
+          echo "TARGET_ACCOUNTS=${{ needs.test-auth.outputs.target_accounts }}" >> $GITHUB_ENV
       
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v3
@@ -67,11 +163,22 @@ jobs:
       
       - name: Create AWS-Nuke config
         run: |
-          # Generate the AWS-Nuke configuration file
+          # Get the target accounts as an array
+          IFS=',' read -ra ACCOUNT_ARRAY <<< "$TARGET_ACCOUNTS"
+          
           cat > nuke-config.yaml <<EOL
           regions:
             - global
             - us-east-1
+            # - us-east-2
+            # - us-west-1
+            # - us-west-2
+            # - eu-west-1
+            # - eu-central-1
+            # - ap-southeast-1
+            # - ap-southeast-2
+            # - ap-northeast-1
+            # - sa-east-1
           
           account-blocklist:
             - "772886489592"  # Management account
@@ -79,9 +186,9 @@ jobs:
           accounts:
           EOL
           
-          # Add target accounts to the config
-          IFS=',' read -ra ACCOUNT_ARRAY <<< "$TARGET_ACCOUNTS"
+          # Add each target account to the config
           for ACCOUNT in "${ACCOUNT_ARRAY[@]}"; do
+            # Trim any whitespace
             ACCOUNT=$(echo "$ACCOUNT" | tr -d ' \t\n\r')
             if [ -n "$ACCOUNT" ] && [ "$ACCOUNT" != "772886489592" ]; then
               cat >> nuke-config.yaml <<EOL
@@ -89,42 +196,184 @@ jobs:
               filters:
                 IAMRole:
                   - "OrganizationAccountAccessRole"
+                  - "AWSServiceRoleFor*"
+                IAMRolePolicyAttachment:
+                  - "role:OrganizationAccountAccessRole:*"
+                IAMPolicy:
+                  - "default"
+                CloudFormationStack:
+                  - "StackSet-AWS-Landing-Zone*"
           EOL
             fi
           done
+          
+          # Add the resource types section
+          cat >> nuke-config.yaml <<EOL
+          prerun-order:
+            # Network cleanup order
+            - EC2RouteTableAssociation  # First remove route table associations
+            - EC2SubnetRouteTableAssociation
+            - EC2NetworkInterfaceAttachment
+            - EC2NetworkInterface
+            - EC2InternetGatewayAttachment
+            - EC2VPCGatewayAttachment
+            - EC2NATGateway
+            - EC2Route
+            - EC2SecurityGroup
+            - EC2Subnet
+            - EC2RouteTable
+            - EC2InternetGateway
+            - EC2VPC
+            - EC2DHCPOption
+            
+            # ELB and related resources
+            - ElasticLoadBalancingV2TargetGroup
+            - ElasticLoadBalancingV2LoadBalancer
+            - ElasticLoadBalancer
+
+          resource-types:
+            targets:
+              # EC2 & Compute Resources
+              - EC2Instance
+              - EC2Volume
+              - EC2Snapshot
+              - EC2KeyPair
+              - EC2SecurityGroup
+              - EC2Address
+              
+              # VPC & Networking Resources
+              - EC2VPC
+              - EC2Subnet
+              - EC2RouteTable
+              - EC2InternetGateway
+              - EC2NatGateway
+              - EC2EIP
+              - EC2DHCPOption
+              - EC2VPCEndpoint
+              - EC2NetworkACL
+              - EC2NetworkInterface
+              - EC2CustomerGateway
+              - EC2VPNGateway
+              - EC2VPNConnection
+              - EC2TransitGateway
+              - EC2TransitGatewayRouteTable
+              - EC2TransitGatewayVpcAttachment
+              
+              # Load Balancing & DNS
+              - ElasticLoadBalancer
+              - ElasticLoadBalancingV2LoadBalancer
+              - ElasticLoadBalancingV2TargetGroup
+              - Route53HostedZone
+              - Route53ResourceRecordSet
+              
+              # Containers & Orchestration
+              - ECSCluster
+              - ECSService
+              - ECSTaskDefinition
+              - EKSCluster
+              
+              # Database Services
+              - RDSInstance
+              - RDSCluster
+              - RDSClusterParameterGroup
+              - RDSParameterGroup
+              - RDSOptionGroup
+              - RDSSubnetGroup
+              - DynamoDBTable
+              - ElasticacheCluster
+              - ElasticacheSubnetGroup
+              - RedshiftCluster
+              
+              # Storage
+              - S3Bucket
+              - S3Object
+              - EBSVolume
+              - EFSFileSystem
+              - EFSMountTarget
+              
+              # Serverless & Functions
+              - Lambda
+              - LambdaFunction
+              - LambdaLayer
+              
+              # Application Services
+              - SQSQueue
+              - SNSTopic
+              - SNSSubscription
+              - CloudWatchAlarm
+              - CloudWatchDashboard
+              - CloudWatchLogGroup
+              
+              # Deployment & Management
+              - CloudFormationStack
+              - AutoScalingGroup
+              - LaunchConfiguration
+              - LaunchTemplate
+              
+              # Security & Identity
+              - KMSKey
+              - KMSAlias
+              # - IAMGroup
+              # - IAMGroupPolicy
+              # - IAMGroupPolicyAttachment
+              # - IAMPolicy
+              
+              # Application Services
+              - ElasticBeanstalkApplication
+              - ElasticBeanstalkEnvironment
+              
+              # CDN & Media
+              - CloudFrontDistribution
+              
+              # API Gateway
+              - APIGatewayRestAPI
+              - APIGatewayResource
+              - APIGatewayStage
+              
+              # Secrets & Parameters
+              - SecretsManagerSecret
+              - SSMParameter
+            
+            excludes:
+              - IAMUser
+              - IAMGroup
+              - IAMRole
+              - IAMPolicy
+              - IAMUserPolicyAttachment
+              - IAMGroupPolicyAttachment
+              - IAMRolePolicyAttachment
+          EOL
+          
+          # Print the config file for debugging
+          echo "Generated AWS-Nuke config:"
+          cat nuke-config.yaml
       
       - name: Run AWS-Nuke
         run: |
+          # First, list accounts to nuke 
           ACCOUNTS_TO_NUKE=$(echo "$TARGET_ACCOUNTS" | tr ',' ' ')
+          
           if [ -z "$ACCOUNTS_TO_NUKE" ]; then
             echo "No accounts to process. Exiting."
             exit 0
           fi
           
-          if [ "$MULTIPLE_PASSES" == "true" ]; then
-            PASSES=$PASS_COUNT
-          else
-            PASSES=1
-          fi
-          
+          # For each account, run AWS-Nuke separately
           for ACCOUNT_ID in $ACCOUNTS_TO_NUKE; do
             if [ "$ACCOUNT_ID" != "772886489592" ]; then
               echo "Processing account: $ACCOUNT_ID"
+              
               ROLE_ARN="arn:aws:iam::${ACCOUNT_ID}:role/OrganizationAccountAccessRole"
               
-              for (( pass=1; pass<=PASSES; pass++ )); do
-                echo "Starting Pass $pass of $PASSES for account $ACCOUNT_ID"
-                CMD="aws-nuke --config nuke-config.yaml --force --assume-role-arn $ROLE_ARN"
-                if [ "$DRY_RUN" == "true" ]; then
-                  CMD="$CMD --dry-run"
-                fi
-                echo "Running command: $CMD"
-                $CMD || echo "Failed for account $ACCOUNT_ID on pass $pass"
-                if [ $pass -lt $PASSES ]; then
-                  echo "Sleeping 30 seconds between passes..."
-                  sleep 30
-                fi
-              done
+              CMD="aws-nuke --config nuke-config.yaml --force --assume-role-arn $ROLE_ARN"
+              
+              # Add dry-run flag
+              if [ "$DRY_RUN" != "true" ]; then
+                CMD="$CMD --no-dry-run"
+              fi
+              
+              echo "Running command: $CMD"
+              $CMD || echo "Failed for account $ACCOUNT_ID"
             else
               echo "Skipping management account $ACCOUNT_ID"
             fi
@@ -140,4 +389,3 @@ jobs:
             echo "Mode: Destructive"
           fi
           echo "Target Accounts: $TARGET_ACCOUNTS"
-          echo "Multiple Passes: $MULTIPLE_PASSES (Count: $PASS_COUNT)"
