--- a/.github/workflows/aws-nuke.yaml
+++ b/.github/workflows/aws-nuke.yaml
@@ -289,7 +289,7 @@ jobs:
               
               # Security & Identity
               - KMSKey
-              - KMSAlias
+              # - KMSAlias
               # - IAMGroup
               # - IAMGroupPolicy
               # - IAMGroupPolicyAttachment
